[workspace]

members = [
  #"contracts/airdrop",
  #"contracts/lp-strategy",
  #"contracts/basic-vault",
  #"contracts/vault-rewards",
  #"contracts/multihop-router",
  #"contracts/cl-vault",
  "contracts/merkle-incentives",
  #"packages/quasar-types",
  #"packages/merkle",
  #"packages/merkle-cli",
]

[workspace.dependencies]
cw-multi-test = {git = "https://github.com/njerschow/cw-multi-test.git"}
