[workspace]

members = [
  "contracts/airdrop",
  "contracts/lp-strategy",
  "contracts/basic-vault",
  "contracts/burn_coins",
  "contracts/vault-rewards",
  "contracts/multihop-router",
  "contracts/cl-vault",
  "contracts/merkle-incentives",
  "packages/quasar-types"
]

[workspace.dependencies]
cw-multi-test = {git = "https://github.com/njerschow/cw-multi-test.git"}
