[workspace]
resolver = "2"

members = [
  # "packages/quasar-std",
  "proto-build",
]

[workspace.dependencies]
prost = {version = "0.12.3", default-features = false, features = ["std"]}
prost-types = {version = "0.12.3", default-features = false}
prost-build = { version = "0.12.3" }
tonic = { version = "0.10" }
tonic-build = { version = "0.10" }
regex = { version = "1" }
walkdir = { version = "2" }
cosmos-sdk-proto = {version = "0.21.1", default-features = false}

