[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true }
osmosis-std = { workspace = true }
osmosis-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus ={ workspace = true }
schemars ={ workspace = true }
serde ={ workspace = true }
thiserror ={ workspace = true }

cw-asset = "3"
num_enum = "0.6.1"
cw2 = "1.0"
cw20 = "1.0"
itertools = "0.11.0"
cw20-base = { version = "0.16.0", features = ["library"] }