[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true }
osmosis-std = { workspace = true }
osmosis-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus ={ workspace = true }
schemars ={ workspace = true }
serde ={ workspace = true }
thiserror ={ workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-asset = { workspace = true }
num_enum = { workspace = true }
itertools = { workspace = true }