[package]
authors = ["N <n@quasar.fi>", "Laurens Kubat <laurens@quasar.fi>"]
description = "a basic vault implementation to "
documentation = "https://docs.quasar.fi/"
edition = "2018"
homepage = "https://quasar.fi"
license = "Apache-2.0"
name = "basic-vault"
repository = "https://github.com/quasar-finance/quasar"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
osmosis-std = { workspace = true }
cw-controllers = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }

cw-asset = "3.0"
serde-json-wasm = {version = "0.4.1", default-features = false}
cw20-staking = {repository = "https://github.com/CosmWasm/cw-tokens.git", revision = "1db4b7387953538d7a0123d3732385981d18db57"}

# Quasar contracts and packages
lp-strategy = {path = "../lp-strategy", features = ["library"], default-features = false}
vault-rewards = {path = "../vault-rewards", features = ["library"], default-features = false}
quasar-types = {path = "../../packages/quasar-types"}

[dev-dependencies]
cw-multi-test = { workspace = true }
prost = { workspace = true }

anyhow = "1"
derivative = "2"
