[package]
name = "burn_coins"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw-asset = "3"
cosmwasm-std = "1.2"
cosmwasm-schema = "1.2"
cw-storage-plus = "1.0"
num_enum = "0.6.1"
cw2 = "1.0"
cw20 = "1.0"
itertools = "0.11.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cw20-base = { version = "0.16.0", features = ["library"] }