[package]
authors = ["LaurensKubat <32776056+LaurensKubat@users.noreply.github.com>"]
edition = "2021"
name = "cl-vault"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
apollo-cw-asset = "0.1.0"
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-controllers = "1.0.1"
cw-dex = "0.4.0"
cw-dex-router = {version = "0.1.0", features = ["library"]}
cw-storage-plus = "1.0.1"
cw-utils = "1.0.2"
cw-vault-multi-standard = {git = "https://github.com/quasar-finance/cw-vault-standard", features = ["lockup", "force-unlock"]}
cw-vault-token = "0.1.0"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = "1.0.1"
derive_builder = "0.12.0"
liquidity-helper = "0.2.1"
num_enum = "0.7.0"
osmosis-std = "0.19.2"
prost = {version = "0.11", default-features = false}
schemars = "0.8.10"
semver = "1"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.31"}

[dev-dependencies]
cw-multi-test = "0.17.0"
osmosis-test-tube = {git = 'https://github.com/osmosis-labs/test-tube.git', version = "19.0.0"}
prost = {version = "0.11", default-features = false}
proptest = "1.2.0"
