[package]
authors = ["LaurensKubat <32776056+LaurensKubat@users.noreply.github.com>"]
edition = "2021"
name = "cl-vault"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""

[dependencies]
apollo-cw-asset = "0.1.0"
cw-dex-router = {git = "https://github.com/quasar-finance/cw-dex-router", branch = "master", features = ["library", "osmosis"]}
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.5.2"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.2"
cw-vault-multi-standard = {git = "https://github.com/quasar-finance/cw-vault-standard", features = ["lockup", "force-unlock"]}
cw2 = "1.0.1"
num_enum = "0.7.0"
osmosis-std = "0.22.0"
prost = {version = "0.12.3", default-features = false}
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.31"}

[dev-dependencies]
osmosis-test-tube = { git="https://github.com/magiodev/test-tube/", branch="fix/v22_go_mod_tidy"}
cw-dex = "0.4.1"
proptest = "1.2.0"
