[package]
name = "cw4626"
version = "0.13.4"
authors = ["Laurens Kubat <Laurens@Quasar.fi>"]
edition = "2021"
description = "Basic implementation of the Quasar vault"
license = "Apache-2.0"
repository = "https://github.com/quasar-finance/quasar"
homepage = "https://www.quasar.fi/"
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"]}
cw-storage-plus = "0.13.4"
cosmwasm-std = { version = "1.0.0-beta8" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
quasar-traits = { path = "../../packages/quasar-traits" }
quasar-types = { path = "../../packages/quasar-types"}
share-distributor = { path = "../../packages/share-distributor"}

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
