[package]
name = "cw-4626"
version = "0.13.4"
authors = ["Laurens Kubat <Laurens@Quasar.fi>"]
edition = "2021"
description = "Basic implementation of the Quasar vault"
license = "Apache-2.0"
repository = "https://github.com/quasar-finance/quasar"
homepage = "https://www.quasar.fi/"
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
osmosis-std = { workspace = true }
osmosis-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus ={ workspace = true }
schemars ={ workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

cw-utils = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw20-base = { version = "0.13.4", features = ["library"]}
quasar-traits = { path = "../../packages/quasar-traits" }
quasar-types = { path = "../../packages/quasar-types"}
strategy = { path = "../strategy", features = ["library"]}
[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
