[package]
name = "ibc_transfer"
version = "0.1.0"
edition = "2021"


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking", "stargate"] }
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = { version = "0.14.0", features = ["iterator"]}
quasar-types = { path = "../../packages/quasar-types", version = "0.1.0"}
quasar-traits = { path = "../../packages/quasar-traits", version = "0.1.0"}
quasar-bindings = { path = "../../packages/quasar-bindings", version = "0.1.0"}
protobuf = { version = "3", features = ["with-bytes"] }
cw-utils = "0.16.0"
osmosis-std = {version = "0.12.0"}
thiserror = { version = "1.0.23" }
cw20-base = { version = "0.16.0", features = ["library"]}
serde-json-wasm = { version = "0.4.1", default-features = false }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0", default-features = false }