[package]
authors = ["Laurens Kubat <Laurens@Quasar.fi>"]
description = "IBC Enabled contracts for interchain queries"
documentation = "https://docs.cosmwasm.com"
edition = "2018"
homepage = "https://cosmwasm.com"
license = "Apache-2.0"
name = "ica"
repository = "https://github.com/CosmWasm/cw-plus"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
base64 = {version = "0.13.0", default-features = false}
cosmos-sdk-proto = {version = "0.14", default-features = false}
cosmwasm-schema = {version = "1.0.0"}
cosmwasm-std = {version = "1.0.0", features = ["stargate"]}
cw-controllers = {version = "0.14.0"}
cw-storage-plus = {version = "0.14.0"}
cw-utils = {version = "0.14.0"}
cw2 = {version = "0.14.0"}
cw20 = {version = "0.14.0"}
osmosis-std = "0.12.0"
prost = {version = "0.11", default-features = false}
quasar-types = {path = "../../packages/quasar-types"}
schemars = "0.8.1"
semver = "1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.23"}
