[package]
name = "icq"
version = "0.1.0"
authors = ["Bo Du <bo@polymerlabs.org>"]
edition = "2018"
description = "IBC Enabled contracts for interchain queries"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
osmosis-std = { workspace = true }
osmosis-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus ={ workspace = true }
schemars ={ workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }

cosmos-sdk-proto = { version = "0.14", default-features = false }
cw-utils = { version = "0.14.0" }
cw2 = {  version = "0.14.0" }
cw20 = { version = "0.14.0" }
cw-controllers = { version = "0.14.0" }
semver = "1"
base64 = { version = "0.13.0", default-features = false }

