[package]
name = "index-staking-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
library = []


[dependencies]
uuid = { version = "1.1.2", default-features = false, features = ["v4","js"]}
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw20-base = { version = "0.16.0", features = ["library"]}
cw-storage-plus = "0.16.0"
cosmwasm-std = { version = "1.0.0", features = ["abort"]}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.81", default-features = false, features = ["alloc"]}
thiserror = { version = "1.0.23" }
intergamm-bindings = { path = "../../packages/intergamm-bindings", version = "0.1.0"}
quasar-traits = { path = "../../packages/quasar-traits" }
quasar-types = { path = "../../packages/quasar-types"}
