[package]
authors = ["Laurens Kubat <Laurens@Quasar.fi>"]
edition = "2021"
name = "lp-strategy"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
osmosis-std = { workspace = true }
osmosis-std-derive = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus ={ workspace = true }
schemars ={ workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }

cosmos-sdk-proto = {version = "0.15", default-features = false}
quasar-types = {path = "../../packages/quasar-types"}
serde-json-wasm = {version = "0.4.1", default-features = false}
uuid = {version = "1.1.2", default-features = false, features = ["v4", "js"]}

[dev-dependencies]
cw-multi-test = {workspace = true}
proptest = "1.0.0"
